--- a/Wed 25/day_03/git/thuchanh_layout/style.css
+++ b/Wed 25/day_03/git/thuchanh_layout/style.css
@@ -1,8 +1,11 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 #card {
+  
   width: 797px;
   height: 160px;
   background-color: #fff;
@@ -10,6 +13,7 @@
   border-radius: 4px;
   display: flex;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+  
 }
 #time {
   background-color: #fe6d3f;
