fix lỗi menu lazada

--- a/Wed 25/day_05/menu_lazada/style.css
+++ b/Wed 25/day_05/menu_lazada/style.css
@@ -101,6 +101,7 @@ ul {
     height: 100%;
     box-shadow: 0 0 4px 0 rgb(0 0 0 / 25%);
     cursor: pointer;
+    
 }
 
 .menu-item:hover .sub-menu {
@@ -108,6 +109,10 @@ ul {
 }
 .sub-menu li:hover .list-menu {
     display: block;
+}
+.sub-menu p {
+    display: flex;
+    justify-content: space-between;
 }
 .list-menu {
     position: absolute;
