--- a/Wed 25/day_07/Page_travel_demo/assets/css/about.css
+++ b/Wed 25/day_07/Page_travel_demo/assets/css/about.css
@@ -165,7 +165,7 @@ img {
 }
 /* Footer */
 #footer {
-  background: url(/Page_demo/assets/img/background-footer.jpg) bottom;
+  background: url(/Wed\ 25//day_07/Page_travel_demo/assets/img/background-footer.jpg) bottom;
   height: 360px;
 }
 #footer .footer-item {
