--- a/wed-project/css/style.css
+++ b/wed-project/css/style.css
@@ -236,7 +236,7 @@ img {
 
 #category-popular .popular-item {
     padding: 10px 20px;
-    background-color: #F2F2F2;
+    background-color: var(--semi-white);
     border-radius: 5px;
     margin-top: 20px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
