--- a/wed-project/css/style.css
+++ b/wed-project/css/style.css
@@ -31,6 +31,7 @@ li {
 }
 
 a {
+    color: var(--semi-black);
     text-decoration: none;
 }
 
@@ -59,6 +60,7 @@ img {
     display: none;
     padding: 0 8px;
 }
+
 
 .logo {
     font-family: 'Devonshire', cursive;
@@ -185,17 +187,40 @@ img {
 }
 
 /* Menu-men desktop */
-.menu-men-desktop {
+.menu-desktop {
     background-color: var(--white);
+    height: auto;
 }
 
 .category-title {
     font-weight: 600;
     margin-top: 15px;
 }
+.desktop-layoutmenu,.item-men,.img-item-men {
+    width: 100%;
+    height: 100%;
+}
+
+.img-item-men img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.menu-desktop .brand-name:hover {
+    color: var(--red);
+}
+
+.item-men {
+    transition: all 0.3s;
+}
+.item-men:hover {
+    cursor: pointer;
+    transform: scale(1.08);
+}
 /* Popup-login,create */
 
-.modal-header {
+#exampleModal .modal-header {
     padding: 16px 0;
     border: none;
 }
@@ -278,6 +303,90 @@ img {
     opacity: 0.8;
     color: var(--white);
 }
+/* thumbnail cart */
+.offcanvas-end {
+    width: 470px;
+}
+.item-cart-info {
+    font-size: 14px;
+}
+
+.btn-up, .btn-down {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: var(--boder);
+}
+
+.btn-up:hover {
+    background-color: #000;
+    color: #fff;
+}
+
+.btn-down:hover {
+    background-color: #000;
+    color: #fff;
+}
+
+.amount-pro-thumbnail  {
+    font-size: 12px;
+}
+
+.item-cart-info p {
+    margin-bottom: 8px;
+}
+
+.price-cart-item {
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--red);
+}
+.navbar-icon button {
+    border: none;
+    background-color: #fff;
+    color: var(--semi-black);
+}
+
+.oder {
+    font-weight: 600;
+}
+
+.price-desc {
+    font-weight: 500;
+    color: var(--red);
+}
+
+.ship-title {
+    font-size: 13px;
+}
+
+.total-price {
+    font-weight: 600;
+}
+
+.btn-pay {
+    border-radius: 5px;
+    color: #fff;
+    background-color: var(--black);
+}
+
+.btn-continue {
+    border-radius: 5px;
+    color: #fff;
+    background-color: var(--red);
+}
+
+.btn-pay:hover {
+    opacity: 0.8;
+}
+
+.btn-continue:hover {
+    opacity: 0.8;
+}
+
+.capacity {
+    color: var(--red);
+}
 /* Section slider */
 #slider .heading {
     font-size: 24px;
@@ -300,6 +409,11 @@ img {
 }
 #slider .item:hover {
     border: 2px solid var(--red);
+    
+}
+
+.menu-item-thumbalnail {
+    max-height: 480px;
     
 }
 
@@ -437,7 +551,93 @@ img {
     width: 80%;
    margin: 0 auto;
  }
+/* popup fast-view */
+#quickview-modal .modal-dialog {
+    max-width: 750px;
+}
 
+.product-sale {
+    opacity: 0.5;
+} 
+
+.btn-add-to-cart, .btn-check-out {
+    font-size: 14px;
+}
+.supporter-image img {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+}
+
+.product-size p:hover {
+    background-color: #212529;
+    color: #fff;
+    cursor: pointer;
+}
+
+.btn-minus-count, .btn-plus-count {
+    cursor: pointer;
+    background-color: #ddd;
+}
+
+
+.status {
+    font-size: 14px;
+}
+
+.brand-name {
+    font-weight: 500;
+}
+#mainCarousel {
+    width: 100%;
+    margin: 0 auto 1rem auto;
+
+    --carousel-button-color: #170724;
+    --carousel-button-bg: #fff;
+    --carousel-button-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%),
+        0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
+
+    --carousel-button-svg-width: 20px;
+    --carousel-button-svg-height: 20px;
+    --carousel-button-svg-stroke-width: 2.5;
+}
+
+#mainCarousel .carousel__slide {
+    width: 100%;
+    padding: 0;
+}
+
+#mainCarousel .carousel__button.is-prev {
+    left: -0.5rem;
+}
+
+#mainCarousel .carousel__button.is-next {
+    right: -0.5rem;
+}
+
+#mainCarousel .carousel__button:focus {
+    outline: none;
+    box-shadow: 0 0 0 4px #a78bfa;
+}
+
+#thumbCarousel .carousel__slide {
+    opacity: 0.5;
+    padding: 0;
+    margin: 0.25rem;
+    width: 96px;
+    height: 64px;
+}
+
+#thumbCarousel .carousel__slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 4px;
+}
+
+#thumbCarousel .carousel__slide.is-nav-selected {
+    opacity: 1;
+}
  /* Section subcribe */
 
 .banner-subcribe {
@@ -579,14 +779,23 @@ img {
 
 /* reponsive */
 @media (max-width: 992px) {
-    .brand-name {
+    /* Header */
+    .item-sidebar-men {
         font-size: 14px;
-        margin-bottom: 10px;
+        
     }
-    /* for user */
+    .brand-name {
+        font-size: 12px;
+        margin-bottom:6px;
+    }
+   
 }
 
 @media (min-width:992px) and (max-width:1200px) {
+    /* Header */
+    .brand-name {
+        margin-bottom: 8px;
+    }
     .price, .price-sale {
         font-size: 12px;
     }
@@ -604,7 +813,7 @@ img {
     .sidebar, .sidebar-men, .sidebar-brand,.sidebar-women, .sidebar-brand-women {
         display: none;
     }
-    .menu-men-desktop {
+    .menu-men-desktop,.menu-women-desktop {
         position: fixed;
         top: -70%;
         left: 0;
@@ -614,6 +823,7 @@ img {
         z-index: 1001;
         transition: all 0.5s;
     }
+
     /* product */
     .btn-view {
         bottom: -20%;
@@ -657,6 +867,9 @@ img {
     .menu-men-desktop {
         display: none;
     }
+    .menu-women-desktop {
+        display: none;
+    }
     .subnav a {
         display: none;
     }
@@ -692,6 +905,10 @@ img {
     #subcribe h4 {
         font-size: 20px;
         margin: 0 12px;
+    }
+    /* popup quickview */
+    .btn-view {
+        display: none !important;
     }
 }
 
