--- a/wed-project/css/base.css
+++ b/wed-project/css/base.css
@@ -44,6 +44,7 @@ img {
 }
 
 .btn-more:hover {
+    cursor: pointer;
     color: var(--red);
 }
 
@@ -454,15 +455,28 @@ button {
     .sidebar, .sidebar-men, .sidebar-brand,.sidebar-women, .sidebar-brand-women {
         display: none;
     }
-    .menu-men-desktop,.menu-women-desktop {
-        position: fixed;
-        top: -70%;
+    .main-menu {
+        position: relative;
+    }
+    .menu-men-desktop, .menu-women-desktop {
+        padding: 0 20px;
+        color: var(--semi-black);
+        background-color: #f2f2f2;
+        display: none;
+        position: absolute;
+        top: 40px;
         left: 0;
         width: 100%;
-        height: 70%;
-        overflow: hidden;
         z-index: 1001;
-        transition: all 0.5s;
+    }
+    .layout-menu {
+        margin-bottom: 20px;
+    }
+    .subnav a:nth-child(2):hover .menu-men-desktop {
+        display: block;
+    }
+    .subnav a:nth-child(3):hover .menu-women-desktop {
+        display: block;
     }
 }
 
