--- a/react/day_05/hook/src/App.css
+++ b/react/day_05/hook/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.dark {
+  background-color: #222;
+  color: #fff;
+}
+.light {
+  background-color: bisque;
+  color: #222;
+}
